FE ticket form alignment fixed

--- a/src/resources/postcss/tickets/_block.pcss
+++ b/src/resources/postcss/tickets/_block.pcss
@@ -128,6 +128,7 @@
 		font-size: var(--tec-font-size-0);
 		font-weight: var(--tec-font-weight-bold);
 		padding: 4px 6px;
+		margin-bottom: 5px;
 	}
 
 	.tribe-tickets-attendees-list-optout--wrapper {
@@ -168,6 +169,12 @@
 		.tribe-tickets__tickets-item-quantity-number-input {
 			color: var(--tec-color-text-disabled);
 			color: var(--tec-color-scroll-bar);
+		}
+	}
+
+	.tribe-tickets__tickets-item--on-sale{
+		.tribe-tickets__tickets-item-quantity {
+			padding-top: 10px;
 		}
 	}
 }
